<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/colorWhite"
    android:paddingStart="@dimen/margin_16"
    android:paddingEnd="@dimen/margin_16">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_story_detail_title_def"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/story_title"
            android:textStyle="bold"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_story_detail_title_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/text_view_story_detail_title_def"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_view_story_detail_title_def"
            tools:text = "A video game community filled my nephew's final days with joy"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_story_detail_author_def"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_view_story_detail_title_value"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/story_author"
            android:textStyle="bold"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_story_detail_author_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/text_view_story_detail_author_def"
            app:layout_constraintTop_toTopOf="@id/text_view_story_detail_author_def"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text = "mattkevan"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_story_detail_creation_date_def"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_view_story_detail_author_value"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/story_creation_date"
            android:textStyle="bold"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_story_detail_creation_date_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/text_view_story_detail_creation_date_def"
            app:layout_constraintTop_toTopOf="@id/text_view_story_detail_creation_date_def"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text = "17.05.1994"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_story_detail_score_def"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_view_story_detail_creation_date_value"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/story_score"
            android:textStyle="bold"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_story_detail_score_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/text_view_story_detail_score_def"
            app:layout_constraintTop_toTopOf="@id/text_view_story_detail_score_def"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text = "141"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_story_detail_id_def"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_view_story_detail_score_value"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin_8"
            android:text = "@string/story_id"
            android:textStyle="bold"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_story_detail_id_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/text_view_story_detail_id_def"
            app:layout_constraintTop_toTopOf="@id/text_view_story_detail_id_def"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text = "2323232"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_story_detail_url_def"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_view_story_detail_id_value"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/story_url"
            android:textStyle="bold"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_story_detail_url_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/text_view_story_detail_url_def"
            app:layout_constraintTop_toTopOf="@id/text_view_story_detail_url_def"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text = "https://www.theguardian.com/games/2019/jul/04/how-a-video-game-community-filled-my-nephews-final-days-with-happiness-elite-dangerous"/>

    </android.support.constraint.ConstraintLayout>



</android.support.constraint.ConstraintLayout>